<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tads.trabalhofragments.EsqFragment"
    android:orientation="vertical">

    <Button
        android:layout_marginLeft="73px"
        android:id="@+id/btnPreto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preto"
        android:textSize="12dp"
    />
    <Button
        android:layout_marginLeft="73px"
        android:id="@+id/btnAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azul"
        android:textSize="12dp"
    />
    <Button
        android:layout_marginLeft="73px"
        android:id="@+id/btnVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verde"
        android:textSize="12dp"
    />
    <Button
        android:layout_marginLeft="73px"
        android:id="@+id/btnVermelho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vermelho"
        android:textSize="12dp"
    />
    <Button
        android:layout_marginLeft="73px"
        android:id="@+id/btnAmarelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amarelo"
        android:textSize="12dp"
    />

</LinearLayout>
